--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,7 +4,7 @@
 html, body {
 	height: 100%;
 	width: 100%;
-	background: url(/images/pluto.webp) center center no-repeat;
+	background: url(/images/ultima_512.png) center center no-repeat;
 	background-color: rgb(41, 43, 42);
 	margin: 0;
 	padding: 0;
