--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,5 +1,33 @@
-@import "container.css";
-@import "centering.css";
+.flex-container {
+	display: flex;
+	width: 100%;
+	height: 100%;
+	flex-direction: column;
+	overflow: hidden;
+}
+
+.flex-header {
+	background-color: rgb(41, 43, 42);
+	margin-bottom: 2px;
+	border-bottom: 8px solid;
+	border-color: rgb(52, 54, 53);
+}
+
+.flex-fill {
+	flex-grow: 1;
+	border: none;
+	margin: 0;
+	padding: 0;
+}
+
+.flex-horizontal {
+	display: flex;
+	flex-direction: row;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+	justify-content: space-evenly;
+}
 
 html, body {
 	height: 100%;
@@ -8,23 +36,4 @@ html, body {
 	background-color: rgb(41, 43, 42);
 	margin: 0;
 	padding: 0;
-}
-
-button {
-	border: 0;
-	margin: 6px;
-	padding: 4px 12px 4px 12px;
-	font-family: 'Roboto', sans-serif;
-	font-size: 18px;
-	background-color: transparent;
-	cursor: pointer;
-	color: white;
-}
-
-button:hover {
-	background-color: rgb(46, 48, 47);
-}
-
-button:active {
-	color: rgb(20, 21, 192)
 }
