--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,8 +1,8 @@
 html, body {
 	height: 100%;
 	width: 100%;
-	background: url(/images/ultima_512.png) center center no-repeat;
-	background-color: rgb(41, 43, 42);
+	/* background: url(/images/ultima_512.png) center center no-repeat; */
+	background-color: rgb(0, 255, 128);
 	margin: 0;
 	padding: 0;
 }
